[package]
name = "antenna-pattern-generator-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
derive-new = "0.5"
memoize = "0.2.1"

[dev-dependencies]
hdf5 = "0.8.1"
ndarray = "0.15.4"
