[package]
name = "antenna-pattern-generator-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
derive_builder = "0.11.2"
# derive-new = "0.5" # not sure I need this anymore
# memoize = "0.2.1"  # may be useful in speeding things up

[dev-dependencies]
hdf5 = "0.8.1"
ndarray = "0.15.4"
# criterion = "0.3.6" # use this for benchmarking later
